add bottom link

--- a/index.html
+++ b/index.html
@@ -110,8 +110,13 @@
             </div>
 
           </div>
-        </div>
+         <p class="bottomInscription"> Coded by Anna Lozovytska. <br />
+           Link to
+        <a href="https://github.com/Ann-Joy/WeatherApp" target="_blank" class="bottomLink">GitHub.</a> </p>
+          </div>
+        
       </div>
+      
     </div>
     <script src="src/scripts.js"></script>
   </body>
