Add change description weather

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
             <div class="row row-cols-2">
               <div class="col">
                 <h2>Weather in <span id="city-name">Kyiv</span></h2>
-                <p id="now-date">Monday 20:00 - 16 May <br />
-                 <span>Cloudy</span></p>
+                <p class="nowDate" id="now-date">Monday 20:00 - 16 May </p>
+                <p id="description">Cloudy</p>
+                
               </div>
               <div class="rol">
 
