--- a/index.html
+++ b/index.html
@@ -59,60 +59,8 @@
               </div>
             </div>
           </div>
-          <div class="container weather-days">
-            <div class="row">
-              <div class="col col-day">
-                <p class="title-day">
-                  Tue
-                  <br />
-                  17 May
-                </p>
-                <h5 class="temp-day">
-                   🌥 18&#176C
-                </h5>
-              </div>
-              <div class="col col-day">
-                <p class="title-day">
-                  Wed
-                  <br />
-                  18 May
-                </p>
-                <h5 class="temp-day">
-                   🌨 15&#176C
-                </h5>
-              </div>
-              <div class="col col-day">
-                <p class="title-day">
-                  Thu
-                  <br />
-                  19 May
-                </p>
-                <h5 class="temp-day">
-                   ☀ 21&#176C
-                </h5>
-              </div>
-              <div class="col col-day">
-                <p class="title-day">
-                  Fri
-                  <br />
-                  20 May
-                </p>
-                <h5 class="temp-day">
-                   🌥 16&#176C
-                </h5>
-              </div>
-              <div class="col col-day">
-                <p class="title-day">
-                  Sat
-                  <br />
-                  21 May
-                </p>
-                <h5 class="temp-day">
-                   🌩 16&#176C
-                </h5>
-              </div>
-            </div>
-
+          <div class="container weather-days" id="forecast">
+            
           </div>
          <p class="bottomInscription"> Coded by Anna Lozovytska. <br />
            Link to
